# replens_automation_system

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
docs/: Architecture.md  Configuration.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  Database.md  Development.md  IMPLEMENTATION_GUIDE.md  OPERATIONS.md  Phases.md  SYSTEM_ARCHITECTURE.md
src/: __init__.py  config.py  database.py  main.py
src/api_wrappers/: amazon_sp_api.py  keepa_api.py
src/dashboard/: app.py
src/models/: __init__.py  base.py  discovery_model.py  inventory.py  performance.py  product.py  purchase_order.py  supplier.py
src/phases/: phase_1_setup.py  phase_2_discovery.py  phase_3_sourcing.py  phase_4_repricing.py  phase_5_forecasting.py
src/services/: __init__.py  order_service.py  performance_service.py  product_service.py  supplier_service.py
src/utils/: logger.py  profitability.py  validators.py
tests/: conftest.py  test_database.py  test_discovery_model.py  test_forecasting.py  test_profitability.py  test_repricing.py  test_validators.py
