[project]
name = "replens-automation-system"
version = "0.1.0"
description = "Amazon Replens Automation System"
requires-python = ">=3.12"
dependencies = [
    # Core
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "pandas>=2.1.4",
    "numpy>=1.26.0",
    # Database
    "sqlalchemy>=2.0.23",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.1",
    # ML & Data Science
    "scikit-learn>=1.3.2",
    "xgboost>=2.0.3",
    "prophet>=1.1.5",
    "statsmodels>=0.14.0",
    # API Integrations
    "python-amazon-sp-api>=0.3.0",
    "keepa>=1.3.0",
    "openai>=1.3.8",
    # Dashboard & Visualization
    "streamlit>=1.28.1",
    "plotly>=5.18.0",
    "altair>=5.1.2",
    # Scheduling & Async
    "apscheduler>=3.10.4",
    "celery>=5.3.4",
    "redis>=5.0.1",
    # Utilities
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
    # Logging & Monitoring
    "python-json-logger>=2.0.7",
    "sentry-sdk>=1.39.1",
    # Deployment
    "gunicorn>=21.2.0",
    "docker>=7.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[dependency-groups]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.1",
    "responses>=0.24.1",
    "black>=23.12.1",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
    "isort>=5.13.2",
]
